--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "click>=8.3.1",
     "openai>=2.15.0",
     "python-dotenv>=1.2.1",
+    "rich>=14.3.1",
 ]
